--- a/Question-1-2/index.html
+++ b/Question-1-2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- icons -->
     <script
       src="https://kit.fontawesome.com/e0f9ab2f02.js"
@@ -95,6 +95,6 @@
         </form>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="./scripts/app.js"></script>
   </body>
 </html>
