--- a/Question-7/index.html
+++ b/Question-7/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="container" onmousemove="event_function(event)">mouse</div>
-    <span id="show_position"></span>
+    <div id="container">mouse</div>
+    <span id="position"></span>
     <script src="app.js"></script>
   </body>
 </html>
