--- a/Question-6/index.html
+++ b/Question-6/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="elemId">Welcome</h1>
+    <h1 id="elemId"></h1>
     <script src="app.js"></script>
   </body>
 </html>
